# advent_of_code

./: .flake8  .pylintrc  Makefile  README.md  get_input.sh  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
days/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py
days/day_01/: day_01.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py
tests/years/eighteen/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
tests/years/fifteen/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
tests/years/nineteen/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
tests/years/seventeen/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
tests/years/sixteen/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
tests/years/twenty/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
tests/years/twenty_one/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
tests/years/twenty_two/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py
years/eighteen/days/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py
years/fifteen/days/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py
years/nineteen/days/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py
years/seventeen/days/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py
years/sixteen/days/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py
years/sixteen/inputs/: 3.in
years/twenty/days/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py
years/twenty_one/days/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py
years/twenty_two/days/: day_02.py  day_03.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py
