[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["Pedro Lopez Mareque <pedro.lopez@clarity.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
black = "^22.10.0"
expects = "^0.9.0"
mypy = "^0.991"
pyupgrade = "^3.2.3"
flake8 = "^6.0.0"
pylint = "^2.15.7"
isort = "^5.10.1"

[tool.flake8]
ignore= ["E501", "E124","E203", "W291", "W503", "W504", "E302", "E303"]

[tool.yapf]
based_on_style = "google"

[tool.pyright]
# venvPath="/home/pedrolopez/.cache/pypoetry/virtualenvs"
# venv="aoc-F4So9u8E-py3.10"
venvPath="/home/pmareke/.cache/pypoetry/virtualenvs"
venv="aoc-7x1CD7iW-py3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
